<resources>
    <string name="app_name">Inventory</string>

    <!-- Title of the editor activity to add new product -->
    <string name="editor_activity_title_new_product">Add a product</string>

    <!-- Title of the editor activity to edit an existing product -->
    <string name="editor_activity_title_edit_product">Edit product</string>

    <!-- Label for editor menu option to save product and leave editor -->
    <string name="action_save">Save</string>

    <!-- Hint for the user to enter the product name -->
    <string name="product_name_hint">Product Name</string>

    <!-- Hint for the user to enter the product price -->
    <string name="product_price_hint">Product Price</string>

    <!-- Hint for the user to enter the product quantity -->
    <string name="product_quantity_hint">Product Quantity</string>

    <!-- Hint for the user to enter the supplier name -->
    <string name="supplier_name_hint">Supplier Name</string>

    <!-- Hint for the user to enter the supplier phone number -->
    <string name="supplier_phone_number_hint">Supplier Phone Number</string>

    <!-- Error message for the user to enter a product name -->
    <string name="err_msg_product_name">Enter product name</string>

    <!-- Error message for the user to enter a product price -->
    <string name="err_msg_product_price">Enter product price</string>

    <!-- Error message for the user to enter product quantity -->
    <string name="err_msg_product_quantity">Enter product quantity</string>

    <!-- Error message for the user to enter supplier name -->
    <string name="err_msg_supplier_name">Enter supplier name</string>

    <!-- Error message for the user to enter supplier phone number -->
    <string name="err_msg_supplier_phone_number">Enter supplier phone number</string>

    <!-- Error message for too long text -->
    <string name="err_msg_text_too_long">Text too long</string>

    <!-- Error message for the user to enter a valid number -->
    <string name="err_msg_non_valid_number">Enter a valid number</string>

    <!-- Price Label for list item to show next to it the price ex(Price: 25) -->
    <string name="price_label">Price:</string>

    <!-- Button label to sell a product -->
    <string name="sell_button_label">Sell</string>

    <!-- Label for catalog menu option delete all products -->
    <string name="action_delete_all">Delete all products</string>

    <!-- Label for catalog menu option delete product -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message to warn the user from deleting all the products -->
    <string name="dialog_msg_delete_all_products">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deletion of product -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of product-->
    <string name="cancel">Cancel</string>

    <!-- Toast message in catalog when all products were successfully deleted -->
    <string name="delete_all_products_successful">All products deleted</string>

    <!-- Toast message in catalog when all products have failed to be deleted -->
    <string name="delete_all_products_failed">Error with deleting products</string>

    <!-- Toast message in editor activity when a new product was added successfully -->
    <string name="add_product_successful">New product added</string>

    <!-- Toast message in editor activity when a new product has failed to be added -->
    <string name="add_product_failed">Error with adding product</string>

    <!-- Toast message in editor activity when a product has successfully updated -->
    <string name="update_product_successful">Product updated</string>

    <!-- Toast message in editor activity when a product has failed to update -->
    <string name="update_product_failed">Error with updating product</string>

    <!-- Dialog message in editor activity to warn the user form deleting the current product -->
    <string name="dialog_msg_delete_product">Delete this product?</string>

    <!-- Toast message in editor activity when product has successfully deleted -->
    <string name="delete_product_successful">Product deleted</string>

    <!-- Toast message in editor activity when product has failed to update -->
    <string name="delete_product_failed">Error with deleting product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="dialog_msg_unsaved_changes">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Title text for the empty view, which describes the empty inventory state-->
    <string name="empty_view_text">The product list is empty now&#8230;</string>

    <!-- Text shown when the list is empty to inform the user to insert a new product -->
    <string name="empty_view_text_secondary">Add a new product</string>
</resources>
