<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_name_text_input"
        style="@style/TextInputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/TextInput"
            android:hint="@string/product_name_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_price_text_input"
        style="@style/TextInputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/TextInput"
            android:hint="@string/product_price_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_quantity_text_input"
        style="@style/TextInputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/TextInput"
            android:hint="@string/product_quantity_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/supplier_name_text_input"
        style="@style/TextInputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/TextInput"
            android:hint="@string/supplier_name_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/supplier_phone_number_text_input"
        style="@style/TextInputLayout">

        <android.support.design.widget.TextInputEditText
            style="@style/TextInput"
            android:hint="@string/supplier_phone_number_hint"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>